# rust-link-shortener

./: .gitignore  Cargo.toml
sql/: create_table.sql  retrieve.sql  write.sql
src/: config.rs  connection.rs  db.rs  lib.rs  main.rs  services.rs
src/services/: hyper_template_funcs.rs  responses.rs
src/services/responses/: hyper_template_funcs.rs
