[package]
name = "rust-url-short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sprintf = { version = "0.3.0" }
regex = "1.3.9"
hex = "0.4.3"
random-string = "1.0"